# Chipotherm

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  TODO.md  build_device.sh  crosscompile_notes.txt  deploy.sh  docker-compose.yml  meson.build  pocketchip.txt
lib/: CMakeLists.txt
resources/: chipotherm.gresource.xml
src/: CMakeLists.txt  actor.cpp  actor.h  actor_grid.cpp  actor_grid.h  button_actor.cpp  button_actor.h  cairo_actor.cpp  cairo_actor.h  clock_actor.cpp  clock_actor.h  color.h  geometry.cpp  geometry.h  graph_actor.cpp  graph_actor.h  io_control.cpp  io_control.h  label_actor.cpp  label_actor.h  main.cpp  main_scene.cpp  main_scene.h  monitor.cpp  monitor.h  palette.cpp  palette.h  primary_scene.cpp  primary_scene.h  qube_actor.cpp  qube_actor.h  remote.cpp  remote.h  rounded_title_actor.cpp  rounded_title_actor.h  runloop.cpp  runloop.h  sounds.cpp  sounds.h  texture_actor.cpp  (+3 more)
subprojects/: bubbles.wrap
utils/: arm-pkg-config  asound.conf  builder.Dockerfile
